--- a/gcam-ios/resources/gcam.storyboard
+++ b/gcam-ios/resources/gcam.storyboard
@@ -82,7 +82,11 @@
                         <subviews>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" barStyle="blackOpaque" translatesAutoresizingMaskIntoConstraints="NO" id="5Rw-Ad-LOY">
                                 <items>
-                                    <barButtonItem title="Use" id="hmT-bn-WlK"/>
+                                    <barButtonItem title="Apply" id="hmT-bn-WlK">
+                                        <connections>
+                                            <action selector="ApplyFilter:" destination="5xl-bE-5H7" id="i9X-zy-TYl"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                             <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" delaysContentTouches="NO" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="BOJ-0b-tRC">
@@ -117,6 +121,7 @@
                                 </cells>
                                 <connections>
                                     <outlet property="dataSource" destination="5xl-bE-5H7" id="Hgn-u3-QPL"/>
+                                    <outlet property="delegate" destination="5xl-bE-5H7" id="Cq2-kC-lJa"/>
                                 </connections>
                             </collectionView>
                         </subviews>
@@ -149,6 +154,7 @@
         <class className="FilterController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/FilterController.h"/>
             <relationships>
+                <relationship kind="action" name="ApplyFilter:"/>
                 <relationship kind="action" name="Use:"/>
                 <relationship kind="action" name="apply_gpuimage_filter:"/>
                 <relationship kind="action" name="numberOfSectionsInCollectionView:"/>
@@ -159,9 +165,6 @@
                 <relationship kind="action" name="viewWillAppear:"/>
                 <relationship kind="outlet" name="collection_view" candidateClass="UICollectionView"/>
             </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
         </class>
         <class className="PanelController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/PanelController.h"/>
@@ -177,18 +180,6 @@
                 <relationship kind="action" name="viewWillAppear:"/>
                 <relationship kind="outlet" name="image_view"/>
             </relationships>
-        </class>
-        <class className="UICollectionReusableView" superclassName="UIView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionReusableView.h"/>
-        </class>
-        <class className="UICollectionViewCell" superclassName="UICollectionReusableView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewCell.h"/>
-        </class>
-        <class className="UICollectionViewFlowLayout" superclassName="UICollectionViewLayout">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewFlowLayout.h"/>
-        </class>
-        <class className="UICollectionViewLayout" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewLayout.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
